//Protocol Buffer file generated by pbandj.

//Required as of protobuf version 2.4.0 to generate service stubs.
option py_generic_services = true;
option java_generic_services = true;

option java_package = "org.lcogt.protobuf";
message Date {
	// Unmapped fields
	optional Time time = 32769;
	required int32 day = 32770;
	required int32 month = 32771;
	required int32 year = 32772;
}

message Time {
	// Unmapped fields
	required int32 hour = 32769;
	required int32 minute = 32770;
	required int32 second = 32771;
}

